--- a/public/organiser-dashboard.html
+++ b/public/organiser-dashboard.html
@@ -132,7 +132,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Old Password</label>
-              <input type="password" class="form-control" id="txtpwd1">
+              <input type="password" class="form-control" required id="txtpwd1">
             </div>
 
             <div class="mb-3">
