--- a/public/organiser-dashboard.html
+++ b/public/organiser-dashboard.html
@@ -137,11 +137,11 @@
 
             <div class="mb-3">
               <label for="exampleInputPassword2" class="form-label">New Password</label>
-              <input type="password" class="form-control" id="txtpwd2">
+              <input type="password" class="form-control" required id="txtpwd2">
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword3" class="form-label">Confirm New Password</label>
-              <input type="password" class="form-control" id="txtpwd3">
+              <input type="password" class="form-control" required id="txtpwd3">
             </div>
           </form>
         </div>
