--- a/public/player-dashboard.html
+++ b/public/player-dashboard.html
@@ -126,16 +126,16 @@
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Old Password</label>
-                            <input type="password" class="form-control" id="txtpwd1">
+                            <input type="password" class="form-control" required id="txtpwd1">
                         </div>
                         
                         <div class="mb-3">
                             <label for="exampleInputPassword2" class="form-label">New Password</label>
-                            <input type="password" class="form-control" id="txtpwd2">
+                            <input type="password" class="form-control" required id="txtpwd2">
                         </div>
                         <div class="mb-3">
                             <label for="exampleInputPassword3" class="form-label">Confirm New Password</label>
-                            <input type="password" class="form-control" id="txtpwd3">
+                            <input type="password" class="form-control" required id="txtpwd3">
                         </div>
                     </form>
                 </div>
