--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -41,21 +41,21 @@
     </center>
     <div class="container row  mx-auto" style="margin-top: 100px;">
         <div class="card col-md-4" >
-            <img src="https://i.pinimg.com/1200x/0b/6b/03/0b6b033db13544bc9514d6798e1203c8.jpg" class="card-img-top" alt="...">
+            <img src="https://i.pinimg.com/1200x/7c/20/8e/7c208e26f7df017555fee6f3b1dc8ce9.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <a href="/user-console" class="btn btn-dark">User Console</a>
             </div>
         </div>
 
         <div class="card col-md-4">
-            <img src="https://i.pinimg.com/736x/b2/ae/4b/b2ae4b2def6e9bc0723deb3a513c507d.jpg" class="card-img-top" alt="...">
+            <img src="https://i.pinimg.com/originals/4b/06/e3/4b06e393fd0647c265b1282b0f006486.gif" class="card-img-top" alt="...">
             <div class="card-body">
                 <a href="/player-data" class="btn btn-dark">Player Data</a>
             </div>
         </div>
 
         <div class="card col-md-4">
-            <img src="https://i.pinimg.com/736x/1b/df/e1/1bdfe1c33f4ad83f98e8d927e1ee0039.jpg" class="card-img-top" alt="...">
+            <img src="https://i.pinimg.com/736x/94/8a/3d/948a3dab110f122232389dc2d278c476.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <a href="/organiser-data" class="btn btn-dark">Organiser Data</a>
             </div>
