--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -30,7 +30,7 @@
     </div>
     
     <div class="auth-buttons">
-      <button class="signup"  data-bs-toggle="modal" data-bs-target="#exampleModal" id="lgbtn" onclick="logout()">Logout</button>
+      <button class="signup" style="position: absolute; top:15px; right: 10px;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="lgbtn" onclick="logout()">Logout</button>
     </div>
   </nav>
   
