--- a/public/user-console.html
+++ b/public/user-console.html
@@ -88,7 +88,7 @@
     <div class="logo">Konnector</div>
 
     <div class="auth-buttons">
-      <button class="signup"  data-bs-toggle="modal" data-bs-target="#exampleModal" id="lgbtn" onclick="home()">Home</button>
+      <button class="signup" style="margin-left: 120px;"  data-bs-toggle="modal" data-bs-target="#exampleModal" id="lgbtn" onclick="home()">Home</button>
     </div>
   </nav>
   
