--- a/public/player-data.html
+++ b/public/player-data.html
@@ -68,8 +68,8 @@
     <div class="container row mx-auto">
         <div class="card col-md-3 mt-3" ng-repeat=" obj in jsonArray">
             <div class="card-body">
-                <img src="{{obj.picurl1}}" border="2" alt="" width="150" height="150">
-                <img src="{{obj.picurl}}" border="2" alt="" width="150" height="150">
+                <img src="{{obj.picurl1}}" style="border: 1px solid black; border-radius: 20px;" alt="" width="150" height="150">
+                <img src="{{obj.picurl}}" style="border: 1px solid black; border-radius: 20px;" alt="" width="150" height="150">
                 <h6 class="card-title"><b><font color="black">Name :</font></b> <font color="green">{{obj.name}}</font></h6>
                 <h6 class="card-text"><b><font color="black">Gender :</font></b> <font color="green">{{obj.gender}}</font></h6>
                 <h6 class="card-text"><b><font color="black">Date Of Birth :</font></b> <font color="green">{{obj.dob}}</font></h6>
