--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
       <!-- Logo and text -->
       <div class="footer-logo">
         <h2>Konnector</h2>
-        <p>Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
+        <p class="t">Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
           We make it easier to connect, collaborate, and grow, whether you’re building professional networks,
           exploring new possibilities, or strengthening existing relationships.With Konnector, every connection becomes
           more meaningful and impactful.</p>
@@ -327,10 +327,9 @@
               <input type="email" required class="form-control" id="txtemail">
             </div>
 
-            <div class="alert1" role="alert" id="validsignup">(Use your actual email. You will receive a WELCOME
-              message.)</div>
+            <div class="alert1" role="alert" id="validsignup">*</div>
 
-            <!-- Password + Checkbox in same row -->
+            <!-- Password + Eye in same row -->
             <div class="mb-3">
               <label for="txtpwd" class="form-label">Password</label>
 
@@ -378,10 +377,8 @@
               <input type="email" class="form-control" id="txtemail1" aria-describedby="emailHelp">
             </div>
 
-            <div class="alert1" role="alert" id="validlog">(Use your actual email. You will receive a WELCOME message.)
-            </div>
-            <!-- Password + Checkbox in same row -->
-
+            <div class="alert1" role="alert" id="validlog">*</div>
+            <!-- Password + Eye in same row -->
 
             <div class="mb-3">
               <label for="txtpwd1" class="form-label">Password</label>
