--- a/public/organiser-details.html
+++ b/public/organiser-details.html
@@ -129,15 +129,16 @@
         <input type="email" class="form-control" id="txtemail" name="txtmail"  readonly placeholder="abc@gmail.com">
       </div>
 
-      <div class="col-md-2"><br>
-        <button type="button" style="font-weight: 700;" class="btn btn-warning px-5 mt-2" id="sbtn">Search</button>
+      <div class="col-md-2">
+        <label class="form-label">Search Organiser</label>
+        <button type="button" style="font-weight: 700;" class="btn btn-warning px-5" id="sbtn">Search</button>
       </div>
 
 
 
       <div class="col-md-7">
         <label for="inputName4" class="form-label">Organisation Name</label>
-        <input type="name" class="form-control" id="orgname" name="orgname" placeholder="name">
+        <input type="name" class="form-control" id="orgname" name="orgname" placeholder="Name">
       </div>
       <div class="col-md-5">
         <label for="inputNumber4" class="form-label">Registration Number</label>
@@ -260,7 +261,7 @@
       <!-- Logo and text -->
       <div class="footer-logo">
         <h2>Konnector</h2>
-        <p>Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
+        <p class="t">Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
           We make it easier to connect, collaborate, and grow, whether you’re building professional networks,
           exploring new possibilities, or strengthening existing relationships.With Konnector, every connection becomes
           more meaningful and impactful.</p>
