--- a/public/post-tournament.html
+++ b/public/post-tournament.html
@@ -107,7 +107,7 @@
         <input type="time" class="form-control" id="time">
       </div>
 
-      <div class="col-9">
+      <div class="col-md-9">
         <label for="inputAddress" class="form-label">Address/Location</label>
         <input type="text" class="form-control" id="address">
       </div>
@@ -117,17 +117,17 @@
         <input type="text" class="form-control" id="city">
       </div>
 
-      <div class="col-8">
+      <div class="col-md-8">
         <label for="inputSports" class="form-label">Sports Category</label>
         <input type="text" class="form-control" id="sports">
       </div>
 
-      <div class="col-2">
+      <div class="col-md-2">
         <label for="inputMin" class="form-label">Minimum Age</label>
         <input type="text" maxlength="2" class="form-control" id="min">
       </div>
 
-      <div class="col-2">
+      <div class="col-md-2">
         <label for="inputMax" class="form-label">Maximum Age</label>
         <input type="text" maxlength="2" class="form-control" id="max">
       </div>
@@ -165,7 +165,7 @@
       <!-- Logo and text -->
       <div class="footer-logo">
         <h2>Konnector</h2>
-        <p>Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
+        <p class="t">Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
           We make it easier to connect, collaborate, and grow, whether you’re building professional networks,
           exploring new possibilities, or strengthening existing relationships.With Konnector, every connection becomes
           more meaningful and impactful.</p>
