--- a/public/tournament-manager.html
+++ b/public/tournament-manager.html
@@ -110,7 +110,7 @@
       <!-- Logo and text -->
       <div class="footer-logo">
         <h2>Konnector</h2>
-        <p>Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
+        <p class="t">Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
           We make it easier to connect, collaborate, and grow, whether you’re building professional networks,
           exploring new possibilities, or strengthening existing relationships.With Konnector, every connection becomes
           more meaningful and impactful.</p>
