--- a/public/profile-player.html
+++ b/public/profile-player.html
@@ -107,8 +107,9 @@
         <input type="email" class="form-control" readonly id="emailid" name="txtmail" aria-describedby="emailHelp">
       </div>
 
-      <div class="col-md-2"><br>
-        <button type="button" id="gdbtn" class="btn btn-dark px-5 mt-2">Get Data</button>
+      <div class="col-md-2">
+        <label class="form-label me-4">Search Player</label>
+        <button type="button" id="gdbtn" class="btn btn-dark px-5">Get Data</button>
       </div>
 
       <div class="col-md-6">
@@ -123,15 +124,15 @@
 
       <div class="col-md-6">
         <label for="inputPreview4" class="form-label">Preview</label><br>
-        <img src="" alt="" width="620" height="150" id="prev">
+        <img src="" alt="" id="prev">
       </div>
 
       <div class="col-md-4">
         <label for="inputPreview4" class="form-label">Preview</label><br>
-        <img src="" alt="" width="620" height="150" id="prev2">
+        <img src="" alt="" id="prev2">
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
         <label for="inputAddress" class="form-label">Address</label>
         <input type="text" class="form-control" id="address" name="address">
       </div>
@@ -167,7 +168,7 @@
       <!-- Logo and text -->
       <div class="footer-logo">
         <h2>Konnector</h2>
-        <p>Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
+        <p class="t">Konnector is designed to bring people, ideas, and opportunities together on one powerful platform.
           We make it easier to connect, collaborate, and grow, whether you’re building professional networks,
           exploring new possibilities, or strengthening existing relationships.With Konnector, every connection becomes
           more meaningful and impactful.</p>
