--- a/public/profile-player.html
+++ b/public/profile-player.html
@@ -109,7 +109,7 @@
 
       <div class="col-md-2">
         <label class="form-label me-4">Search Player</label>
-        <button type="button" id="gdbtn" class="btn btn-dark px-5">Get Data</button>
+        <button type="button" style="font-weight: 700;" id="gdbtn" class="btn btn-dark px-5">Get Data</button>
       </div>
 
       <div class="col-md-6">
@@ -124,12 +124,12 @@
 
       <div class="col-md-6">
         <label for="inputPreview4" class="form-label">Preview</label><br>
-        <img src="" alt="" id="prev">
+        <img src="" alt="" class="img-fluid" id="prev">
       </div>
 
       <div class="col-md-4">
         <label for="inputPreview4" class="form-label">Preview</label><br>
-        <img src="" alt="" id="prev2">
+        <img src="" alt="" class="img-fluid" id="prev2">
       </div>
 
       <div class="col-md-6">
