--- a/public/organiser-details.html
+++ b/public/organiser-details.html
@@ -130,7 +130,7 @@
       </div>
 
       <div class="col-md-2">
-        <label class="form-label">Search Organiser</label>
+        <label class="form-label me-5">Search Organiser</label>
         <button type="button" style="font-weight: 700;" class="btn btn-warning px-5" id="sbtn">Search</button>
       </div>
 
