--- a/public/tournament-finder.html
+++ b/public/tournament-finder.html
@@ -71,7 +71,7 @@
             }
 
             $scope.fetchorganiser = function (emailid) {
-                // alert(emailid);
+                alert(emailid);
                 var url = "/do-fetchorganiser?mail="+emailid;
 
 
